[tool.poetry]
name = "finalproject-zhabinskaya-m25-555"
version = "0.1.0"
description = "ValutaTrade Hub"
authors = ["Victoria Zhabinskaya <zhabinskayavictoria@yandex.ru>"]
readme = "README.md"
packages = [
     { include = "valutatrade_hub" },
]

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
prettytable = "^3.16.0"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.0,<0.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
